--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "build": "npx tsc",
     "start:prod": "npm run build && node build/server",
     "lint": "npx eslint ./src",
-    "format": "npx eslint ./src --fix"
+    "format": "npx eslint ./src --fix",
+    "test": "node ./node_modules/mocha/bin/mocha -n loader=ts-node/esm --extension ts 'src/__tests__/*'"
   },
   "author": "agreenwalrus",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "chai": "^4.3.7",
     "eslint": "^8.30.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0"
@@ -28,6 +34,7 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "node-fetch": "^3.3.0",
     "uuid": "^9.0.0"
   }
 }
