--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "crud-api",
   "version": "1.0.0",
   "description": "project for RSS NODE 2022 Q4",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start:dev": "npx nodemon",
     "build": "npx tsc",
-    "start:prod": "npm run build && node build/server",
+    "start:prod": "npm run build && node build/index",
     "lint": "npx eslint ./src",
     "format": "npx eslint ./src --fix",
     "test": "node ./node_modules/mocha/bin/mocha -n loader=ts-node/esm --extension ts 'src/__tests__/*'"
@@ -26,10 +26,8 @@
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
-    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
