--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.4",
+    "@types/chai-http": "^4.2.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "eslint": "^8.30.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
